# roost

./: .gitignore  README.md  display.py  game.py  generate_data.py  macros.py  match.py  mcts_player.py  minimax_player.py  net.py  nn_player.py  player.py  train_net.py
cpp/: .gitignore  CMakeLists.txt
cpp/build_support/: run_clang_format.py
cpp/include/game/: Action.h  GameState.h  game_defs.h
cpp/src/: main.cpp
cpp/src/game/: Action.cpp  Game.cpp  GameState.cpp
cpp/src/include/game/: Action.h  Game.h  GameState.h  game_defs.h
cpp/src/include/play/: GTP.h  Match.h
cpp/src/include/player/: AbstractPlayer.h  Evaluator.h  MCTSPlayer.h  MCTS_defs.h  NNEvaluator.h  RandomPlayer.h
cpp/src/include/utils/: Zobrist.h
cpp/src/play/: GTP.cpp  Match.cpp
cpp/src/player/: Evaluator.cpp  MCTSPlayer.cpp  NNEvaluator.cpp  RandomPlayer.cpp
cpp/src/utils/: Zobrist.cpp
cpp/test/: game_test.cpp  player_test.cpp
